--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <div class="contact-title">
-      <h1>Albumul cu idei</h1>
+      <h1>Te iubesc! <3</h1>
       <h2>Noi ascultăm ideile voastre și le punem în aplicare pe cele mai bune</h2>
     </div>
 
